# llm_peft_exploration

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_00_vanilla_clf_ag_news.ipynb  01_01_clean_sequential_training_clf_ag_news_vanilla_clf.ipynb  01_01_sequential_training_clf_ag_news_vanilla_clf.ipynb  02_01_clean_genai_sequential_training_clf_ag_news.ipynb  02_01_genai_sequential_training_clf_ag_news.ipynb  openprompt_ag_news.ipynb  openprompt_glue_clf.ipynb  question_answering-generative.ipynb  question_answering.ipynb  sequential_training_clf_ag_news-Copy1.ipynb  training_utils.py  vanilla_clf_ag_news-archive.ipynb
notebooks/data/predictions/: genai_agnews_clf_pred_labels.json
prompt_sample_efficiency/: 02_00_openprompt_ag_news.ipynb  03_00_question_answering-tutorial.ipynb  03_01_question_answering.ipynb  03_02_question_answering-generative.ipynb
rag_with_llama2/: README.md  rag_with_llama_and_qdrant.ipynb
