[tool.poetry]
name = "llm-peft-exploration"
version = "0.1.0"
description = ""
authors = ["p.mitra <p.mitra@elsevier.com>"]
readme = "README.md"
packages = [{include = "llm_peft_exploration"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^2.0.1"
ipykernel = "^6.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
